k8s/ingress.widget.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-widget
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    # cert-manager.io/issuer: "letsencrypt-staging"
spec:
  rules:
    - host: widget.grascannabis.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gras-service-widget
                port:
                  number: 80
